# GeodesicInHeat

./: CMakeLists.txt  DomainHeat.h  HalfedgeDS.cpp  PointCloudHeat.cpp  PointCloudHeat.h  README.md  TriangleMeshHeat.cpp  TriangleMeshHeat.h  main.cpp
include/: DomainHeat.h  Laplacian.h  PointCloudHeat.h  TriangleMeshHeat.h  UIMenu.h  Utils.h
src/: DomainHeat.cpp  HalfedgeBuilder.cpp  HalfedgeDS.cpp  Laplacian.cpp  PointCloudHeat.cpp  TriangleMeshHeat.cpp  Utils.cpp  main.cpp
